samples/_failures_safe/1761652344_6093ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3961a09e.c:151: error: expected ‘;’, ‘,’ or ‘)’ at end of input
